<resources>
    <string name="app_name">FIPA</string>
    <string name="sign_up_fipa">파파 회원가입</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log in</string>
    <string name="business_license">Registration Number</string>
    <string name="back">Back</string>
    <string name="signup_request_made">All Set!</string>
    <string name="signup_request_made_detail"></string>
    <string name="close_App">Close App</string>
    <string name="reset_password">Reset Password</string>
    <string name="i_remember_password">I Remember My Password</string>
    <string name="main_ask">Q &amp; A</string>
    <string name="main_companies">Companies</string>
    <string name="main_notifications">Alarm</string>
    <string name="main_account">My Account</string>
    <string name="ask_area">Field</string>
    <string name="ask_write_content">content</string>
    <string name="ask_write_post">Post</string>
    <string name="all_choose">Choose</string>
</resources>
