<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_ask"
        android:icon="@drawable/main_bottom_ic_ask_24dp"
        android:title="@string/main_ask"/>
    <item
        android:id="@+id/action_companies"
        android:icon="@drawable/main_bottom_ic_companies_24dp"
        android:title="@string/main_companies" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/main_bottom_ic_account_24dp"
        android:title="@string/main_account" />
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/main_bottom_ic_notification_24dp"
        android:title="@string/main_notifications" />
</menu>