<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginModel"
            type="com.example.fipa.models.Login" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkColor">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/primaryColor"
            android:gravity="center|bottom"
            android:paddingBottom="@dimen/margin_24dp"
            android:text="@string/reset_password"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/font_48sp"
            app:layout_constraintDimensionRatio="2.25:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etCompany"/>

        <com.example.fipa.views.EditTextWithImage
            android:id="@+id/etCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:confidential="false"
            app:image="@drawable/ic_person"
            app:imagePosition="left"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:placeholder="@string/company_name"
            app:textSize="@dimen/font_8sp" />

        <com.example.fipa.views.EditTextWithImage
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:confidential="false"
            app:image="@drawable/ic_email"
            app:imagePosition="left"
            app:layout_constraintBottom_toTopOf="@+id/etBusinessLicense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCompany"
            app:placeholder="@string/email"
            app:textSize="@dimen/font_8sp" />

        <com.example.fipa.views.EditTextWithImage
            android:id="@+id/etBusinessLicense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:confidential="false"
            app:image="@drawable/ic_lock"
            app:imagePosition="left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:placeholder="@string/business_license"
            app:textSize="@dimen/font_8sp" />


        <Button
            android:id="@+id/btnSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_white"
            android:text="@string/i_remember_password"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.8"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:background="@drawable/btn_dark"
            android:textColor="@color/primaryTextColor"
            android:text="@string/reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
