<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryColor"
        app:layout_constraintDimensionRatio="1:1.15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/font_48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            tools:text="@string/signup_request_made" />

        <TextView
            android:id="@+id/tvDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_18sp"
            android:lineSpacingExtra="@dimen/margin_12dp"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProgress"
            tools:text="@string/signup_request_made_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCloseApp"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_48dp"
        android:background="@drawable/btn_dark"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/close_App"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnCloseApp"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_48dp"
        android:background="@drawable/btn_dark"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/close_App"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>